<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
	    <groupId>org.springframework.boot</groupId>
	    <artifactId>spring-boot-starter-parent</artifactId>
	    <version>2.7.2</version>
	    <relativePath /> <!-- lookup parent from repository -->
	</parent>

	<groupId>com.lasrosas.iot.core</groupId>
	<artifactId>iot.core</artifactId>
	<version>2.2.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Las Rosas IOT core</name>
	<description>Las Rosas IOT base project</description>

	<properties>
		<java.version>18</java.version>
		<config.path>${project.basedir}/config</config.path>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.lasrosas.iot.core</groupId>
				<artifactId>database</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.lasrosas.iot.core</groupId>
				<artifactId>database</artifactId>
				<version>${project.version}</version>
				<type>test-jar</type>
			    <scope>test</scope>
			</dependency>

			<dependency>
				<groupId>com.lasrosas.iot.core</groupId>
				<artifactId>shared</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.lasrosas.iot.core</groupId>
				<artifactId>ingestor</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.lasrosas.iot.core</groupId>
				<artifactId>reactor</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.influxdb</groupId>
				<artifactId>influxdb-client-java</artifactId>
				<version>6.4.0</version>
			</dependency>
			<dependency>
			    <groupId>io.goodforgod</groupId>
			    <artifactId>gson-configuration</artifactId>
			    <version>1.4.2</version>
			</dependency>
			<dependency>
			    <groupId>com.google.code.gson</groupId>
			    <artifactId>gson</artifactId>
			    <version>2.10</version>
			</dependency>
 		</dependencies>
	</dependencyManagement>

	<modules>
		<module>shared</module>
		<module>database</module>
		<module>alarm</module>
		<module>ingestor</module>
		<module>reactor</module>
		<module>flux</module>
		<module>webapi</module>
	</modules>

</project>
